<resources>
    <string name="app_name">Ui2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="todo">TODO</string>
    <string name="start_to_invest_nfor_your_future">Start to invest</string>
    <string name="for_your_future">for your future!</string>
    <string name="ex_totam_praesentium_incidunt_aut">Ex totam praesentium incidunt aut.</string>
    <string name="next">Next</string>
    <string name="follow_our_tips">Follow our tips</string>
    <string name="to_achieve_success">to achieve success!</string>
    <string name="keep_your">Keep your</string>
    <string name="investment_safe">investment safe</string>
    <string name="start">start</string>
    <string name="tradix">TRADIX</string>
    <string name="the_future_of_trading">The future of trading</string>
    <string name="welcome">Welcome!</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="login">Login</string>
    <string name="create_a_free_account">Create a free account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sing_up">Sing up</string>
    <string name="we_have_sent_you_an">We have sent you an</string>
    <string name="email_to_change_your">email to change your</string>
    <string name="resend_email">RESEND EMAIL</string>
    <string name="wait_30_seconds_before_sending_it">Wait 30 seconds before sending it</string>
    <string name="title_activity_confim_password_changed">ConfimPasswordChangedActivity</string>
    <string name="index">INDEX</string>
    <string name="shares">SHARES</string>
    <string name="currencies">CURRENCIES</string>
    <string name="futures">FUTURES</string>
    <string name="cry">CRY</string>
    <string name="load_more">LOAD MORE</string>
    <string name="neo_index">NEO INDEX</string>
    <string name="usd">USD</string>
    <string name="binance">Binance</string>
    <string name="rate">RATE</string>
    <string name="today_change">TODAY CHANGE</string>
    <string name="_2_0634_9_44">+2,0634 (+9,44%)</string>
    <string name="_21_1637">21,1637</string>
    <string name="_17_00_33_real_time">17:00:33 Real time</string>
    <string name="neo_chart">NEO Chart</string>
    <string name="general">General</string>
    <string name="technical_section">Technical Section</string>
    <string name="markets">Markets</string>
    <string name="charts">Charts</string>
    <string name="buy_or_sell_for_neo">Buy or Sell for NEO</string>
    <string name="mkt_capitalization">Mkt Capitalization</string>
    <string name="down_jones">DOWN JONES</string>
    <string name="_20_047_50">20.047,50</string>
    <string name="nyse">NYSE</string>
    <string name="_203_1_04">+203 (+1,04%)</string>
    <string name="_10_44_45">10:44:45</string>
    <string name="news">NEWS</string>
    <string name="economics">ECONOMICS</string>
    <string name="raw_material">RAW MATERIAL</string>
    <string name="crypto_news">CRYPTO NEWS</string>
    <string name="editorial">EDITORIAL</string>
    <string name="alt_3_87">ALT -3,87%</string>
    <string name="atlantia">ATLANTIA</string>
    <string name="_3_sept_2020">3 Sept 2020</string>
    <string name="menu">MENU</string>
    <string name="mary_olson">MARY OLSON</string>
    <string name="alerts">Alerts</string>
    <string name="select_stocks">Select Stocks</string>
    <string name="tools">Tools</string>
    <string name="editorial_news">EDITORIAL NEWS</string>
    <string name="cryptocurrency">CRYPTOCURRENCY</string>
    <string name="_02_set_2020">02 Set 2020</string>
    <string name="paragraph">Rem deserunt voluptatem sapiente. Quod sint officiis quae magnam. Qui eaque atque quia. Incidunt dolor reiciendis tenetur libero error consequatur voluptate recusandae. Sequi voluptatum quas. Ullam voluptatem reprehenderit ea commodi. Doloremque autem praesentium qui harum quia sunt voluptatem eius at. Voluptates voluptatem eaque et voluptas maxime molestiae et. Et saepe perferendis ut quidem et est. Et iusto ut nostrum delectus. Libero et modi placeat labore sit et quaerat sed. Dolorem libero earum ipsum illum nemo.</string>
    <string name="sign_up">Sign Up</string>
</resources>