<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <!--    android:background="@drawable/background_bottom_border">-->

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4dp"
        android:layout_marginTop="@dimen/_18dp"
        android:fontFamily="@font/raleway_black"
        android:text="@string/down_jones"
        android:textColor="#676767"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_18dp"
        android:layout_marginEnd="@dimen/_6dp"
        android:background="@drawable/background_3"
        android:fontFamily="@font/raleway_regular"
        android:paddingStart="@dimen/_12dp"
        android:paddingTop="@dimen/_4dp"
        android:paddingEnd="@dimen/_8dp"
        android:paddingBottom="@dimen/_6dp"
        android:text="@string/_20_047_50"
        android:textColor="#020202"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLocal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4dp"
        android:layout_marginTop="@dimen/_4dp"
        android:layout_marginBottom="@dimen/_17dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/nyse"
        android:textColor="#4d4d4d"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5dp"
        android:layout_marginTop="@dimen/_4dp"
        android:layout_marginBottom="@dimen/_17dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/_10_44_45"
        android:textColor="#676767"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvLocal"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="@dimen/_14dp"
        android:layout_marginBottom="@dimen/_16dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/_203_1_04"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPrice" />
</androidx.constraintlayout.widget.ConstraintLayout>