<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.CoinFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30dp"
                android:layout_marginTop="@dimen/_55dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/icons_8_expand_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                style="@style/TextStyle4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10dp"
                android:layout_marginTop="@dimen/_52dp"
                android:text="@string/neo_index"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                style="@style/TextStyle5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_62dp"
                android:layout_marginTop="@dimen/_4dp"
                android:text="@string/usd"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView3"
                style="@style/TextStyle6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18dp"
                android:layout_marginTop="@dimen/_4dp"
                android:text="@string/binance"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="@dimen/_18dp"
                android:layout_height="@dimen/_18dp"
                android:layout_marginTop="@dimen/_60dp"
                android:layout_marginEnd="@dimen/_30dp"
                android:contentDescription="@string/todo"
                android:alpha="0.3"
                android:src="@drawable/icons_8_menu_vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabAlarm"
                android:layout_width="@dimen/_37dp"
                android:layout_height="@dimen/_37dp"
                android:layout_marginTop="@dimen/_50dp"
                android:layout_marginEnd="@dimen/_10dp"
                android:clickable="true"
                android:contentDescription="@string/todo"
                android:focusable="true"
                android:src="@drawable/icons_8_alarm"
                app:fabCustomSize="@dimen/_37dp"
                app:layout_constraintEnd_toStartOf="@+id/imageView1"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_27dp"
                android:layout_marginTop="123dp"
                android:layout_marginEnd="@dimen/_26dp"
                android:background="@drawable/background_gradient_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView4"
                    style="@style/TextStyle7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_46dp"
                    android:layout_marginTop="@dimen/_17dp"
                    android:text="@string/rate"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView5"
                    style="@style/TextStyle7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_17dp"
                    android:layout_marginEnd="@dimen/_25dp"
                    android:text="@string/today_change"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView6"
                    style="@style/TextStyle8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3dp"
                    android:layout_marginEnd="@dimen/_23dp"
                    android:layout_marginBottom="@dimen/_37dp"
                    android:text="@string/_2_0634_9_44"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <TextView
                    android:id="@+id/textView7"
                    style="@style/TextStyle9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_45dp"
                    android:layout_marginTop="@dimen/_24dp"
                    android:text="@string/_21_1637"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView8"
                    style="@style/TextStyle10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_7dp"
                    android:layout_marginTop="@dimen/_36dp"
                    android:text="@string/usd"
                    app:layout_constraintStart_toEndOf="@+id/textView7"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView9"
                    style="@style/TextStyle11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_45dp"
                    android:layout_marginTop="@dimen/_2dp"
                    android:layout_marginBottom="@dimen/_19dp"
                    android:text="@string/_17_00_33_real_time"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_18dp"
                    android:layout_marginTop="@dimen/_33dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/icons_8_long_arrow_up"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_37dp"
                android:layout_marginTop="@dimen/_25dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/image2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25dp"
                android:layout_marginEnd="@dimen/_37dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="86dp"
                android:layout_marginTop="@dimen/_23dp"
                android:layout_marginEnd="87dp"
                android:background="@drawable/background_3"
                android:fontFamily="@font/raleway_regular"
                android:paddingStart="@dimen/_16dp"
                android:paddingTop="@dimen/_4dp"
                android:paddingEnd="@dimen/_15dp"
                android:paddingBottom="@dimen/_5dp"
                android:text="@string/neo_chart"
                android:textColor="#222222"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/imageView4"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_131dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/todo"
                android:src="@drawable/componente_7_4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25dp"
                android:layout_marginTop="@dimen/_16dp"
                android:layout_marginEnd="@dimen/_22dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/todo"
                android:src="@drawable/neo_chart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_28dp"
                android:background="@drawable/background_4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView6">

                <TextView
                    android:id="@+id/textView11"
                    style="@style/TextStyle12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_39dp"
                    android:layout_marginTop="@dimen/_27dp"
                    android:gravity="center"
                    android:text="@string/general"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView12"
                    style="@style/TextStyle12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_40dp"
                    android:layout_marginTop="@dimen/_22dp"
                    android:background="@drawable/button_background_3"
                    android:gravity="center"
                    android:paddingStart="@dimen/_8dp"
                    android:paddingTop="@dimen/_5dp"
                    android:paddingEnd="@dimen/_8dp"
                    android:paddingBottom="@dimen/_6dp"
                    android:text="@string/technical_section"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@+id/textView11"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView13"
                    style="@style/TextStyle12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_27dp"
                    android:layout_marginEnd="@dimen/_45dp"
                    android:gravity="center"
                    android:text="@string/markets"
                    app:layout_constraintEnd_toStartOf="@+id/textView14"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView14"
                    style="@style/TextStyle12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_27dp"
                    android:layout_marginEnd="@dimen/_3dp"
                    android:gravity="center"
                    android:text="@string/charts"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView15"
                    style="@style/TextStyle13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_42dp"
                    android:layout_marginTop="@dimen/_47dp"
                    android:text="@string/buy_or_sell_for_neo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_38dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:layout_marginBottom="@dimen/_39dp"
                    app:cardCornerRadius="@dimen/_15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView15">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_11dp"
                        android:layout_marginTop="@dimen/_8dp"
                        android:layout_marginEnd="9dp"
                        android:layout_marginBottom="@dimen/_7dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/raggruppa_38" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/textView20"
                    style="@style/TextStyle13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_47dp"
                    android:layout_marginEnd="@dimen/_88dp"
                    android:text="@string/mkt_capitalization"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView13" />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8dp"
                    android:layout_marginEnd="@dimen/_39dp"
                    android:layout_marginBottom="@dimen/_39dp"
                    app:cardCornerRadius="@dimen/_15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView20">

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_33dp"
                        android:layout_marginTop="@dimen/_15dp"
                        android:layout_marginEnd="@dimen/_32dp"
                        android:layout_marginBottom="@dimen/_16dp"
                        android:src="@drawable/raggruppa_60" />
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>